--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="description" content="This is our official Website for the Minecraft Server Hypixel.net! Join now with 1.8-1.19!">
   
   
-  <title>Inicio - TierraPrometida</title>
+  <title>Inicio | TierraPrometida</title>
   <link rel="stylesheet" href="assets/fontawesome/css/all.min.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
