--- a/tos.html
+++ b/tos.html
@@ -10,7 +10,7 @@
   <meta name="description" content="This is the Terms of Service page of the Minecraft server Hypixel.net">
   
   
-  <title>Terminos de servicios - TierraPrometida</title>
+  <title>Terminos de servicios | TierraPrometida</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
